# rnfc

./: README.md  ci.sh  rust-toolchain.toml
examples/fm175xx/: Cargo.toml
examples/fm175xx/.cargo/: config.toml
examples/fm175xx/src/: main.rs
examples/st25r39-disco/: Cargo.toml
examples/st25r39-disco/.cargo/: config.toml
examples/st25r39-disco/src/: main.rs
ndef/: Cargo.toml  LICENSE-MIT  README.md
ndef/src/: capability_container.rs  lib.rs  ndef_record.rs  tlv.rs
ndef/src/ndef_record/: external_type.rs  mod.rs
rnfc/: Cargo.toml
rnfc-acr122u/: Cargo.toml
rnfc-acr122u/src/: lib.rs
rnfc-android/: Cargo.toml  gen.sh  java-spaghetti.toml  java-spaghetti.yaml  workspace.code-workspace
rnfc-android/java/android/nfc/: NfcAdapter_ReaderCallback.java
rnfc-android/src/: bindings.rs  errors.rs  lib.rs
rnfc-fm175xx/: Cargo.toml
rnfc-fm175xx/src/: iso14443a.rs  lib.rs
rnfc-fm175xx/src/interface/: i2c.rs
rnfc-ios/: Cargo.toml
rnfc-ios/src/: lib.rs
rnfc-libnfc/: Cargo.toml
rnfc-libnfc/examples/: basic.rs
rnfc-libnfc/src/: lib.rs
rnfc-st25r39/: Cargo.toml
rnfc-st25r39/src/: aat.rs  iso14443a.rs  lib.rs  lib_st25r3911b.rs  lib_st25r3916.rs  regs_st25r3911b.rs
rnfc-st25r39/src/commands/: cmds_st25r3916.rs  mod.rs  st25r3911b.rs  stub.rs
rnfc-st25r39/src/impls/: interrupts.rs  lib.rs  lib_st25r3911b.rs  lib_st25r3916.rs  mod.rs  stub.rs
rnfc-st25r39/src/regs/: mod.rs  regs_st25r3911b.rs  regs_st25r3916.rs  stub.rs
rnfc-st25r39/src/yaml-regmaps/: regs-st25r3911b.yaml  regs-st25r3916.yaml
rnfc-traits/: Cargo.toml
rnfc/src/: iso_dep.rs
