[package]
name = "rnfc-android"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0 OR MIT"

[dependencies]
async-channel = "2.3.1"
java-spaghetti = { git = "https://github.com/Dirbaio/java-spaghetti", rev = "4789417239aade099d1c6af361929c0a5fcac5fa" }
log = "0.4.27"
rnfc-traits = { path = "../rnfc-traits" }
