[package]
name = "rnfc-android"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0 OR MIT"

[dependencies]
async-channel = "2.3.1"
java-spaghetti = { git = "https://github.com/Dirbaio/java-spaghetti", rev = "c7668f3cd5f07e2120d7ed008d193c1a4f4295ad" }
log = "0.4.27"
rnfc-traits = { path = "../rnfc-traits" }
