[package]
authors = ["Dario Nieuwenhuis <dirbaio@dirbaio.net>"]
edition = "2024"
name = "rnfc-fm175xx"
version = "0.1.0"
license = "Apache-2.0 OR MIT"

[features]
defmt = ["dep:defmt", "embassy-time/defmt", "rnfc-traits/defmt"]

[dependencies]
rnfc-traits = { path = "../rnfc-traits" }

# TODO: Remove
cortex-m = "0.7.7"

defmt = { version = "1", optional = true }
log = { version = "0.4.27", optional = true }

futures = { version = "0.3.31", default-features = false, features = ["async-await"] }
embassy-time = { version = "0.4" }
embassy-futures = { version = "0.1.1" }
embedded-hal = { version = "1" }
embedded-hal-async = { version = "1" }
