[package]
name = "rnfc-st25r39"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0 OR MIT"

[features]
defmt = [ "dep:defmt", "rnfc-traits/defmt", "heapless/defmt" ]

[dependencies]
defmt = { version = "1", optional = true }
log = { version = "0.4.27", optional = true }

embassy-time = { version = "0.5" }
embassy-futures = { version = "0.1" }
rnfc-traits = { version = "0.1.0", path = "../rnfc-traits" }
heapless = "0.9" 
embedded-hal = { version = "1" }
embedded-hal-async = { version = "1" }
